--- a/pcb/MainWindow.xaml
+++ b/pcb/MainWindow.xaml
@@ -1,21 +1,62 @@
-﻿<Window x:Class="pcb.MainWindow"
+﻿<Controls:MetroWindow x:Class="pcb.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:pcb"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:local="clr-namespace:pcb" TitleCaps="False"
+        Icon="Command_Block.ico" MinWidth="300" MinHeight="200"
+        FontFamily="Microsoft YaHei" Title="懒癌卫士——OOC生成器(1.9)" 
+        FontSize="16" Height="450" Width="720" ResizeMode="CanResize"
+        TitlebarHeight="30" BorderBrush="#007ACC" Background="#272822"
+        ShowIconOnTitleBar="False" BorderThickness="1" Closing="MetroWindow_Closing"
+        xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit" 
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" 
+        mc:Ignorable="d">
     <Grid>
-        <TextBox x:Name="input" Height="170" VerticalAlignment="Top" TextWrapping="Wrap" TextChanged="input_TextChanged" PreviewKeyDown="input_PreviewKeyDown" Margin="10,10,10,0"/>
-        <ListBox x:Name="listBox" Height="129" Focusable="False" Margin="10,10,10,10" VerticalAlignment="Bottom">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding}" />
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+        <avalonEdit:TextEditor ShowLineNumbers="True" Margin="5,30,5,30" WordWrap="True" 
+         x:Name="Editor" FontFamily="Microsoft Yahei UI" VerticalScrollBarVisibility="Auto" 
+         HorizontalScrollBarVisibility="Auto" 
+         ScrollViewer.VerticalScrollBarVisibility="Auto" FontSize="16" Foreground="White" 
+         LineNumbersForeground="#a6a6a6" TextChanged="Editor_TextChanged">
+        </avalonEdit:TextEditor>
+        <Grid x:Name="notifyArea" VerticalAlignment="Bottom" Height="25" HorizontalAlignment="Stretch"  
+              Background="#575757">
+            <Border BorderThickness="0,1,0,0" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" BorderBrush="#888888">
+                <Grid>
+                    <TextBlock x:Name="notificationTB" Margin="5,5,5,5" FontFamily="Microsoft Yahei UI"
+                       FontSize="11"></TextBlock>
+                    <TextBlock x:Name="LastEditTB" Margin="5,5,5,5" FontFamily="Microsoft Yahei UI" TextAlignment="Right"
+                       FontSize="11"></TextBlock>
+                </Grid>
+            </Border>
+        </Grid>
+        <Menu VerticalAlignment="Top" Height="30" IsMainMenu="True" BorderBrush="Gray"
+        BorderThickness="1">
+            <MenuItem Header="文件">
+                <MenuItem Header="新建" Click="NewFile_Click"/>
+                <MenuItem Header="载入文件" Click="OpenFile_Click"></MenuItem>
+                <MenuItem Header="另存新档" Click="SaveNewFile_Click"></MenuItem>
+                <MenuItem Header="保存文件" IsEnabled="False" x:Name="SaveFile" 
+                          Click="SaveFile_Click" InputGestureText="Ctrl + S"></MenuItem>
+            </MenuItem>
+            <MenuItem Header="编辑">
+                <MenuItem Header="转义选择字符" Click="Escape_Click" InputGestureText="Alt + \"/>
+                <MenuItem Header="反转义选择字符" Click="Deesacpe_Click" InputGestureText="Alt + /"/>
+                <MenuItem Header="插入随机UUID(UUIDMost/UUIDLeast)" Click="insertUUID_Click" InputGestureText="Alt + R"/>
+                <MenuItem Header="插入Marker type(AS/AEC)" Click="inserType_Click" InputGestureText="Alt + T"/>
+                <MenuItem Header="插入§" Click="insertFormat_Click" InputGestureText="Alt + F"/>
+                <MenuItem Header="颜色黑科技" ToolTip="牌子clickEvent,强行在MC输入§" Click="colorBlackTech_Click" InputGestureText="Alt + C"/>
+                <Separator/>
+                <MenuItem Header="折叠全部" Click="foldAll_Click" InputGestureText="Ctrl + K"/>
+                <MenuItem Header="寻找/替换" Click="FindReplace_Click" InputGestureText="Ctrl + F"/>
+                <MenuItem Header="注释选择的行" Click="comment_Click" InputGestureText="Ctrl + /"/>
+                <MenuItem Header="反注释选择的行" Click="uncomment_Click" InputGestureText="Ctrl + \"/>
+            </MenuItem>
+            <MenuItem Header="设置" Click="MenuItem_Click">
+            </MenuItem>
+            <MenuItem Header="生成" Click="generateFromEditor" InputGestureText="Ctrl + G"
+                      ToolTip="把所有指令变为OOC / 把选择部分变为OOC">
+            </MenuItem>
+        </Menu>
     </Grid>
-</Window>
+</Controls:MetroWindow>
