--- a/pcb/CustomMessageBox.xaml
+++ b/pcb/CustomMessageBox.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:pcb"
+        xmlns:p="clr-namespace:pcb.Properties"
         mc:Ignorable="d" xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" Topmost="True"
         Height="200" Width="400" ResizeMode="NoResize" ShowCloseButton="False" ShowInTaskbar="False" Icon="Command_Block.ico"
         Closing="MetroWindow_Closing" BorderBrush="#37AFF2" BorderThickness="2" ShowTitleBar="False" Background="White" WindowStartupLocation="CenterScreen">
@@ -13,9 +14,9 @@
         <ScrollViewer Margin="20,60,5,45">
             <TextBlock x:Name="message" TextWrapping="Wrap" Foreground="Black" Background="White" FontSize="20" FontFamily="Microsoft Yahei"></TextBlock>
         </ScrollViewer>
-        <Button x:Name="btnClose" Content="取消" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" FontFamily="Microsoft Yahei" Width="100" Height="25" Click="btnClose_Click" FontSize="15" Padding="0"></Button>
-        <Button x:Name="btnNo" Content="否" HorizontalAlignment="Right" FontSize="15" Padding="0" Margin="0,0,120,10" FontFamily="Microsoft Yahei" VerticalAlignment="Bottom" Width="100" Height="25" Click="btnNo_Click" ></Button>
-        <Button x:Name="btnYes" Content="是" HorizontalAlignment="Right" FontSize="15" Padding="0" Margin="0,0,230,10" FontFamily="Microsoft Yahei" VerticalAlignment="Bottom" Width="100" Height="25" Click="btnYes_Click" ></Button>
+        <Button x:Name="btnClose" Content="{x:Static p:UIresources.cancel}" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" FontFamily="Microsoft Yahei" Width="100" Height="25" Click="btnClose_Click" FontSize="15" Padding="0"></Button>
+        <Button x:Name="btnNo" Content="{x:Static p:UIresources.no}" HorizontalAlignment="Right" FontSize="15" Padding="0" Margin="0,0,120,10" FontFamily="Microsoft Yahei" VerticalAlignment="Bottom" Width="100" Height="25" Click="btnNo_Click" ></Button>
+        <Button x:Name="btnYes" Content="{x:Static p:UIresources.yes}" HorizontalAlignment="Right" FontSize="15" Padding="0" Margin="0,0,230,10" FontFamily="Microsoft Yahei" VerticalAlignment="Bottom" Width="100" Height="25" Click="btnYes_Click" ></Button>
     </Grid>
     <Window.Resources>
         <Style TargetType="Button">
