--- a/pcb/MainWindow.xaml
+++ b/pcb/MainWindow.xaml
@@ -20,7 +20,7 @@
          x:Name="Editor" FontFamily="Microsoft Yahei UI" VerticalScrollBarVisibility="Auto" 
          HorizontalScrollBarVisibility="Auto" 
          ScrollViewer.VerticalScrollBarVisibility="Auto" FontSize="16" Foreground="White" 
-         LineNumbersForeground="#a6a6a6" TextChanged="Editor_TextChanged">
+         LineNumbersForeground="#a6a6a6" TextChanged="Editor_TextChanged" PreviewKeyDown="Editor_PreviewKeyDown">
         </avalonEdit:TextEditor>
         <Grid x:Name="notifyArea" VerticalAlignment="Bottom" Height="25" HorizontalAlignment="Stretch"  
               Background="#575757">
@@ -62,9 +62,11 @@
                 <MenuItem Header="{x:Static p:UIresources.settingGenerator}"  Click="showSetting"/>
                 <MenuItem Header="{x:Static p:UIresources.autocompleteSourceSetting}" ToolTip="scb objectives, tags, names, teams" Click="showList"/>
             </MenuItem>
-            <MenuItem Header="{x:Static p:UIresources.generate}" Click="generateFromEditor" InputGestureText="Ctrl + G"
-                      ToolTip="{x:Static p:UIresources.generateToolTip}">
+            <MenuItem Header="OOC">
+                <MenuItem Header="{x:Static p:UIresources.generate}"  Click="generateFromEditor" InputGestureText="Ctrl + G"/>
+                <MenuItem Header="{x:Static p:UIresources.updateCommands}" ToolTip="{x:Static p:UIresources.updateCommandsTooltip}" Click="replaceCB"/>
             </MenuItem>
+            
         </Menu>
     </Grid>
 </Controls:MetroWindow>
